--- a/solutions/manifest.json
+++ b/solutions/manifest.json
@@ -6,6 +6,13 @@
 			"part1": "solutions/2025/day1/part1.go",
 			"part2": "solutions/2025/day1/part2.go",
 			"input": "solutions/2025/day1/input.txt"
+		},
+		"2": {
+			"title": "Gift Shop",
+			"description": "solutions/2025/day2/description.txt",
+			"part1": "solutions/2025/day2/part1.go",
+			"part2": "solutions/2025/day2/part2.go",
+			"input": "solutions/2025/day2/input.txt"
 		}
 	}
 }
